# ticketscloud

./: Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: db.py  routes.py  settings.py  views.py
tests/: conftest.py  test_db.py  test_endpoints.py
